--- a/index.html
+++ b/index.html
@@ -11,29 +11,15 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-      
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <img v-bind:src="image">
-          </div>
-          <div id="app">
-            <h1>{{ product }}</h1>
-            <p v-if="inventory > 10">In Stock</p>
-            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
-            <p v-else>Out of Stock</p>
-            <ul>
-              <li v-for="detail in details">{{ detail }}</li>
-            </ul>
-            <div v-for="variant in variants" :key="variant.id" @mouseover="updatedImage(variant.image)">{{ variant.color }}</div>
-            <button class="button" v-on:click="cart += 1">Add to cart</button>
-          </div>
-        </div>
-      </div>
+      <div class="cart">Cart({{ cart }})</div>
+      <product-display :premium="premium"></product-display>
     </div>
 
     <!-- Import Js -->
     <script src="./main.js"></script>
+
+    <!-- Import Component -->
+    <script src="./components/productDisplay.js"></script>
 
     <!-- Mount App -->
     <script>
